fix(ProductTile): add missing color value

--- a/patterns/core/ProductList/productList.styl
+++ b/patterns/core/ProductList/productList.styl
@@ -205,7 +205,8 @@ $breakpoint-huge = 1150px
   &--turquoise-blu
     background #32B1C8
 
-
+  &--rust
+    background #98654B
 
 .product-list__filter-reset-button
   display none
